--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -34,7 +34,8 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: 1.20
-
+      - name: Get dependencies
+        run: go mod download
       - name: Build Distribution
         run: go run dist.go
       - name: Setup Pages
