--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
-          go-version: 1.20
+            go-version-file: 'go.mod'
       - name: Get dependencies
         run: go mod download
       - name: Build Distribution
