--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -48,3 +48,19 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
+      
+      - uses: actions/setup-node@v3
+
+      - name: Install Nativefier
+        run: npm install -g nativefier
+
+      - name: Run Nativefier Windows
+        run: nativefier --portable --platform 'windows'  --name 'Digame' 'https://the-singularity-labs.github.io/Digame'
+
+      # - name: Archive production artifacts
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: electron
+      #     path: |
+      #       dist
+      #       !dist/**/*.md
