--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -60,8 +60,8 @@ jobs:
       - name: Install Nativefier
         run: npm install -g nativefier
 
-      - name: Run Nativefier Windows
-        run: nativefier --portable --platform 'windows'  --name 'Digame' 'https://the-singularity-labs.github.io/Digame'
+      - name: Run Nativefier Linux
+        run: nativefier --portable --platform 'linux'  --name 'Digame' 'https://the-singularity-labs.github.io/Digame'
 
       # - name: Archive production artifacts
       #   uses: actions/upload-artifact@v3
