random wine fix

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -75,6 +75,8 @@ jobs:
       - name: Add Wine Release Key
         run: curl -fsSL  https://dl.winehq.org/wine-builds/Release.key | sudo apt-key add -
 
+      - name: Random Wine fix
+        run: sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv F987672F
       - name: Add Wine Repository
         run: sudo apt-add-repository https://dl.winehq.org/wine-builds/ubuntu/
       
