--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -55,7 +55,7 @@ jobs:
         uses: jacobtomlinson/gha-find-replace@v3
         with:
           find: "/main.wasm"
-          replace: "/ain.wasm"
+          replace: "main.wasm"
           regex: false
           include: dist/index.html
       - name: Setup Pages
