--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -44,8 +44,8 @@ jobs:
         run: vgrun -install-tools
       - name: Build Distribution
         run: go run dist.go
-      - name: Add Bulma CSS to Distribution
-        run: cp bulma.min.css dist/bulma.min.css
+      - name: Add Turret CSS to Distribution
+        run: cp turretcss.min.css dist/turretcss.min.css
       - name: Add Favicon to Distribution
         run: cp favicon.png dist/favicon.png
       - name: Find and Replace wasm_exec.js
